# COBRE

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  Session.vim  build.sh  cmakework.vim  cobwork.vim
docs/source/: conf.py  index.rst
docs/source/about/: index.rst  introduction.rst
include/: .Canvas.h.swp  .Pixel.h.swp  .Pos2D.h.swp  .Rengine.h.swp  CMakeLists.txt  Canvas.h  CobreDef.h  Gelement.h  Pair2D.h  Pixel.h  PixelBuffer.h  Pos2D.h  Position.h  Rengine.h  Size2D.h
src/: .CMakeLists.txt.swp  CMakeLists.txt
src/core/: CMakeLists.txt  Canvas.cpp  Pixel.cpp  PixelBuffer.cpp  Rengine.cpp
src/main/: .CMakeLists.txt.swp  CMakeLists.txt  main.cpp
tests/: Test.cpp  Test.h
